[package]
name = "leet-tui"
version = "0.1.2"
authors = ["Trevor O'Farrell"]
edition = "2021"
description = "A terminal UI for solving LeetCode problems with embedded Neovim"
license = "MIT"
repository = "https://github.com/trevor/leet-tui"
keywords = ["leetcode", "tui", "terminal", "neovim", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "leet-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-term = "0.2"
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rust-embed = { version = "8.0", features = ["include-exclude"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
